# mcs

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
include/mcs/: logger.hpp
include/mcs/buffer/: abstract_buffer.hpp  buffer.hpp
include/mcs/buffer/impl/: memory_buffer.hpp
include/mcs/common/: linker.hpp  memory.hpp  module.hpp
include/mcs/core/: core.hpp  repository.hpp
include/mcs/networking/: abstract_client_settings_provider.hpp  networking.hpp  test_packet.hpp
include/mcs/networking/impl/: socket_holder.hpp  tcp_client.hpp  tcp_listener.hpp  tcp_reader.hpp  timer_holder.hpp
include/mcs/protocol/: abstract_packet.hpp  data_types.hpp
include/mcs/protocol/impl/: packet.hpp
src/mcs/: CMakeLists.txt
src/mcs/buffer/: CMakeLists.txt  buffer.cpp  memory_buffer.cpp
src/mcs/core/: CMakeLists.txt  core.cpp
src/mcs/logger/: CMakeLists.txt  logger.cpp
src/mcs/networking/: CMakeLists.txt  networking.cpp
src/mcs/protocol/: CMakeLists.txt  packet.cpp
src/test/: CMakeLists.txt  main.cpp  test_client.cpp
